<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.braems.henneron.mediachallenge.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/usernameTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PlayButton"
        android:id="@+id/play"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/usernameTextView"
        android:layout_toLeftOf="@+id/answerTextView"
        android:layout_toStartOf="@+id/answerTextView" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StopButton"
        android:id="@+id/stop"
        android:layout_alignBottom="@+id/play"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/play" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/answerTextView"
        android:id="@+id/answerTextView"
        android:layout_below="@+id/stop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answerButton"
        android:id="@+id/answerButton"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/answerTextView"
        android:layout_alignStart="@+id/answerTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/score2TextView"
        android:id="@+id/score2TextView"
        android:layout_alignTop="@+id/stop"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/scoreTextView"
        android:layout_alignBottom="@+id/play"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/answerEditText"
        android:layout_above="@+id/answerButton"
        android:layout_alignLeft="@+id/answerButton"
        android:layout_alignStart="@+id/answerButton"
        android:layout_alignRight="@+id/answerButton"
        android:layout_alignEnd="@+id/answerButton"
        android:inputType="textShortMessage" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/answerListView"
        android:layout_below="@+id/answerTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/stop"
        android:layout_alignEnd="@+id/stop"
        android:layout_above="@+id/answerEditText"
        android:transcriptMode="alwaysScroll"
        android:stackFromBottom="true" />

</RelativeLayout>
